# hena-wadeena

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .prettierignore  .wtcrc.json  AGENTS.md  CLAUDE.md  Caddyfile  LICENSE  Makefile  README.md  amplify.yml  code-review-issues.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  fix-guide.md  knip.ts  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr.md  summary.md  tsconfig.build.json  tsconfig.json  tsconfig.seed.json  vitest.workspace.ts
.github/: dependabot.yml
.github/workflows/: auto-assign-pr.yml  ci.yml  codex.yml  deploy-frontend.yml  deploy.yml  pr-check.yml  (+1 more)
deployment/: README.md
docs/: AGENTS.md  agent_issue_resolution_guide.md  app-flow-map.html  pr-review-fixes-guide.md  pr-review-instructions.md
gateway/: Dockerfile  README.md  nginx.conf  nginx.conf.template  nginx.conf.template.spec.ts  vitest.config.ts
scripts/: check-drizzle-migrations.sh  db-reset.ts  init-schemas.sql  optimize-images.sh  tsconfig.json
services/ai/: Dockerfile  Nakheel_RAG_System_Guide.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/ai/docker/: wait_for_services.py
services/ai/nakheel/: config.py  exceptions.py  main.py
services/ai/nakheel/api/: deps.py  router.py
services/ai/nakheel/api/endpoints/: chat.py  documents.py  health.py  legacy_ai.py
services/ai/nakheel/bootstrap/: __init__.py  knowledge_base.py
services/ai/nakheel/bootstrap/datasets/: new_valley_2026.json
services/ai/nakheel/core/generation/: llm_client.py  prompt_builder.py
services/ai/nakheel/core/ingestion/: chunker.py  curated_text.py  embedder.py  indexer.py  parser.py
services/ai/nakheel/core/retrieval/: hybrid_search.py  query_processor.py  reranker.py
services/ai/nakheel/core/session/: context_window.py  session_manager.py
services/ai/nakheel/db/: mongo.py  qdrant.py
services/ai/nakheel/models/: api.py  document.py
services/ai/nakheel/utils/: slug.py
services/ai/scripts/: generate_seed_token.ts  seed_knowledge_base.py
services/ai/src/: config.py  main.py
services/ai/tests/: test_api.py  test_bootstrap_loader.py  test_curated_text.py  test_health.py  test_indexer.py  test_retrieval.py  test_session.py  test_startup_checks.py
(+1121 files in other folders)
