[project]
name = "hena-ai"
version = "0.2.0"
description = "Hena Wadeena - AI Service (RAG Chatbot)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.19",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pymongo>=4.10.1",
    "qdrant-client>=1.16.1",
    "llama-index-core>=0.14.13",
    "llama-index-vector-stores-qdrant>=0.9.1",
    "fastembed>=0.3.4",
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
    "pypdf>=5.1.0",
    "docling>=2.7.0",
    "docling-core>=2.7.0",
    "FlagEmbedding>=1.3.3",
    "transformers>=4.44.2",
    "torch>=2.5.1",
    "sentence-transformers>=2.0,<3.0",
    "langdetect>=1.0.9",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.4",
    "PyJWT>=2.10.1",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["nakheel", "src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
